--- a/SplitScreenRegions.csproj
+++ b/SplitScreenRegions.csproj
@@ -14,6 +14,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove=".gitignore" />
+      <None Remove="LICENSE" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1" />
         <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.0.1" />
     </ItemGroup>
